# MPS-snowflake-sample01

./: .env.example  .env.poetry  .gitignore  .pre-commit-config.yaml  Makefile  README.md  activate_poetry.sh  fix_poetry_path.sh  pyproject.toml  requirements.txt  run_streamlit.sh
.github/workflows/: README.md  daily_ingest.yml  pipeline.yml  pr_checks.yml
.streamlit/: config.toml
api/: __init__.py  main.py  models.py
app/: main.py  streamlit_app.py
scripts/: README.md  check_article_content.py  check_data.py  create_chunks_proc.py  enhance_articles.py  fetch_full_article.py  fix_cosine_function.py  fix_poetry_env.sh  recreate_all_chunks.py  run_streamlit.sh  setup_db.py  simple_solution.py  test_connection.py
scripts/data/: clean_session.py  ingest.py
scripts/debug/: check_objects.py  check_view_columns.py  debug_search.py  status.py
scripts/setup/: setup_embeddings.py  setup_tables.py
snowflake/: embeddings.sql  setup.sql
sql/: create_task.sql  embeddings.sql  setup.sql
src/: config.py  embeddings.py  fetch_rss.py  ingest.py  load_to_snowflake.py  loader.py  main.py  models.py  transform.sql  transform_basic.sql
tests/: test_basic.py  test_config.py
